--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "lib": [ "es2019", "DOM", "ES6" ,"DOM.Iterable", "ScriptHost"],
   },
 
   "references": [
